added new swagger conf
